# Network-Beacon

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: ci.yml
sigma/rules/: c2_beacon_periodic_timing.yml  c2_dns_tunneling.yml  c2_suspicious_tls_fingerprint.yml
src/: alerting.rs  analyzer.rs  capture.rs  config.rs  dns_detector.rs  error.rs  export.rs  geo.rs  http_detector.rs  main.rs  metrics.rs  replay.rs  tls_fingerprint.rs  ui.rs
